# SuperResolution

./: .gitignore  CLAUDE.md  Discriminator.py  EarlyStopping.py  Generator.py  JetImageDataset.py  README.md  TrainingLoop.py  __init__.py  config.py  convert_to_pt.py  main.py  pyproject.toml  test.py  train.py  train.sh  training_metrics.csv  utils.py
logs/: metrics_20260123_155437.csv  metrics_20260126_113309.csv  metrics_20260129_000058.csv  metrics_20260130_124050.csv
scripts/: convert_to_pt.py  debug.py
